Modified report first draft

--- a/Compte-Rendu/aide-decision.tex
+++ b/Compte-Rendu/aide-decision.tex
@@ -35,23 +35,6 @@ En second lieu, nous proposons au responsable d'entreprise une solution qui sati
 Finalement, nous dégagerons parmi les 8 propositions de gestion de l'atelier, la solution optimale au vu des critères définis par les décideurs de l'entreprise.    
 
 
-%\begin{description}
-%\item[Figure :]  Une figure peut être un cercle, un rectangle, une ligne, une polyligne ou un agrégat. L’agrégat est composé d’autant de figures que l’ont veut et celles-ci peuvent aussi être des agrégats.
-%\item[Point :] Une  structure Point est définie, elle contient les coordonnées x et y d’un point sous forme de longs.
-%\end{description}
-
-%\subsection{Choix Généraux}
-%\begin{itemize}
-%\item La caste est importante autant pour les noms que pour les commandes. Une commande invalide générera une réponse ERR.
-%\end{itemize}
-%
-% 
-%\subsection{Détail des fonctionnalités et choix spécifiques}
-%\subsubsection{Création d'une figure}
-%\begin{description}
-%\item[Cercle :] {\tt C Name X1 Y1 R }, avec Name son nom, X1,Y1 les coordonnées de son centre et R son rayon. Le rayon doit être supérieur ou égal à 0. Le nom doit être composé de lettres et de chiffres, les autres paramètres sont des long. Un nom ne peut pas être composé de plusieurs mots.
-%\end{description}
-
 \section{Prise en compte des contraintes globales}
 TODO :D
 
@@ -132,7 +115,7 @@ O
 %	\begin{center}
 %	\includegraphics[scale=0.7]{UML.png}
 %	\end{center}
-%	\caption{Diagramme de classes de l'application}
+%	\caption{Diagram label}
 %\end{figure}
 
 %\pagebreak
