--- a/Compte-Rendu/aide-decision.tex
+++ b/Compte-Rendu/aide-decision.tex
@@ -105,7 +105,7 @@ $\mathbf{
 Par ailleurs, nous devons ajouter des contraintes de domaines. En effet, la production ne peut pas être négative. Nous avons donc :
 $ x_{A} \geq 0$, $x_{B}  \geq 0$, $x_{C} \geq 0$, $x_{D} \geq 0$, $x_{E} \geq 0$, $x_{F} \geq 0 $
 Des contraintes relatives aux différents cas d'analyses seront ajoutées aux précédentes par la suite.
-\section{Analyse des objectifs de chacun des cadres}
+\section{Analyse des objectifs de chacun des cadres : programmation linéaire monocritère}
 Dans cette partie, nous mettons en œuvre des techniques de programmation linéaire monocritère afin de proposer à chaque cadre la solution qui permet d'optimiser son objectif métier.
 \subsection{Le comptable}
 L'objectif du comptable est de maximiser le bénéfice de l'entreprise. Ce bénéfice est calculé en tenant compte des coûts de fonctionnement des machines et du coût d'achat des matières premières. Pour chaque matière le bénéfice unitaire (i.e. pour un produit vendu) sera donc donné par la formule suivante : \begin{center} $pv - \sum_{i=1}^{3}(paMP_{i} * qteMP_{i}) - \frac{1}{60} \sum_{j=1}^{7}(tupM_{j} * chM_{j}) $ \end{center} avec: \newline 
@@ -421,9 +421,87 @@ $\mathbf{A.X^{*}_{personnel} - b =
  } $ 
 \end{center}
 TODO : Analyser résultats 
+
+\section{Point de vue du Responsable d'entreprise : programmation linéaire multicritère}
+
+
+\section{Sélection du meilleur plan de production : analyse multicritère}
+Suite aux études précédentes et aux différentes discussions, nous avons retenu 8 propositions de gestion d'atelier.
+L'entreprise s'est entendue sur 4 critères à considérer pour décider du meilleur plan de production : le bénéfice, la gestion du stock, l'équilibre commercial (Proposer une diversité de produits) et le taux d'utilisation de certaines machines délicates.
+
+Nous avons attribué un poids à chacun de ces critères en jugeant de leur importance relative. Nous privilégions principalement le bénéfice (Raison d'être de l'entreprise). Nous avons ensuite décider de pondérer de la même manière les critères 2 et 3, que nous jugeons de même importance. Quant au critère 4, nous le considérons comme le moins important, les opérateurs pouvant être formés à l'utilisation de ces machines.
+Pour notre analyse, nous avons réévalué les notes de chaque critère afin de correspondre à une échelle plus adaptée. Nous obtenons donc les résultats suivants :\newline
+\begin{center}
+\begin{tabular}{|c|c|c|c|c|}
+\hline 
+Critère & g1 & g2 & g3 & g4 \\ 
+\hline 
+Coefficient & 5 & 3 & 3 & 2 \\ 
+\hline 
+Echelle & 0 $ \Rightarrow $ 10 & 2 $ \Rightarrow $ 8 & 2 $ \Rightarrow $ 8 & 3 $ \Rightarrow $ 7 \\ 
+\hline 
+a & 6 & 5 & 5 & 5 \\ 
+\hline 
+b & 5 & 4.4 & 7.4 & 4.2 \\ 
+\hline 
+c & 3 & 4.4 & 6.2 & 4.2 \\ 
+\hline 
+d & 3 & 6.2 & 5 & 4.6 \\ 
+\hline 
+e & 5 & 4.4 & 3.8 & 6.6 \\ 
+\hline 
+f & 2 & 5 & 6.2 & 4.2 \\ 
+\hline 
+g & 5 & 4.4 & 3.2 & 6.6 \\ 
+\hline 
+h & 3 & 5 & 6.2 & 4.6 \\ 
+\hline 
+\end{tabular} 
+\end{center}
+Pour résoudre ce problème et trouver la meilleure solution possible, nous avons utilisé la méthode \emph{Electre 1}.
+Dans un premier temps, nous avons déterminer les dominances fortes sur les critères précédents. Ainsi, nous avons déterminé que :
+\begin{description}
+\item[•]b et h dominent c
+\item[•] e domine g
+\item[•] h domine f
+\end{description}
+Nous avons ensuite calculé les matrices de concordance et de discordance.
+\begin{center}
+$
+\textbf{Matrice de Concordance} = 
+\left( 
+\begin{array}{ccccc}
+• & • & • & • & • \\ 
+• & • & • & • & • \\ 
+• & • & • & • & • \\ 
+• & • & • & • & • \\ 
+• & • & • & • & •
+\end{array}
+\right) 
+$
+
+$
+\textbf{Matrice de Discordance} = 
+\left( 
+\begin{array}{ccccc}
+• & • & • & • & • \\ 
+• & • & • & • & • \\ 
+• & • & • & • & • \\ 
+• & • & • & • & • \\ 
+• & • & • & • & •
+\end{array}
+\right) 
+$
+\end{center}
+Après plusieurs itérations, nous avons choisi les seuils suivants :
+\begin{description}
+\item[$C_{1}$] = Seuil de concordance = 
+\item[$C_{2}$] = Seuil de discordance = 
+\end{description}
+En appliquant ces valeurs, nous obtenons le graphe de surclassement suivant :
 %\begin{figure}
 %	\begin{center}
-%	\includegraphics[scale=0.7]{UML.png}
+%	\includegraphics[scale=0.7]{graphe_surclassement.png}
 %	\end{center}
 %	\caption{Diagram label}
 %\end{figure}
