--- a/Compte-Rendu/aide-decision.tex
+++ b/Compte-Rendu/aide-decision.tex
@@ -459,7 +459,7 @@ h & 3 & 5 & 6.2 & 4.6 \\
 \end{tabular} 
 \end{center}
 Pour résoudre ce problème et trouver la meilleure solution possible, nous avons utilisé la méthode \emph{Electre 1}.
-Dans un premier temps, nous avons déterminer les dominances fortes sur les critères précédents. Ainsi, nous avons déterminé que :
+Dans un premier temps, nous avons déterminé les dominances fortes sur les critères précédents. Ainsi, nous avons déterminé que :
 \begin{description}
 \item[•]b et h dominent c
 \item[•] e domine g
